--- a/samconfig.toml
+++ b/samconfig.toml
@@ -1,6 +1,6 @@
  version=0.1
  [default.deploy.parameters]
- stack_name = "ts-graphql-hw-with-sam"
+ stack_name = "ts-simple-api-proxy-with-sam"
  s3_bucket = "my-source-bucket"
  s3_prefix = "my-s3-prefix"
  region = "ap-southeast-2"
