--- a/template.yaml
+++ b/template.yaml
@@ -23,6 +23,7 @@ Resources:
           Properties:
             Path: /get-users
             Method: get
+      Policies: ./config/policies.yaml
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
@@ -34,6 +35,6 @@ Outputs:
   HelloWorldGqFunction:
     Description: "Hello World GraphQL Lambda Function ARN"
     Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldGqFunctionIamRole:
-    Description: "Implicit IAM Role created for Hello World GraphQL function"
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+  # HelloWorldGqFunctionIamRole:
+  #   Description: "Implicit IAM Role created for Hello World GraphQL function"
+  #   Value: !GetAtt HelloWorldFunctionRole.Arn
