--- a/template.yaml
+++ b/template.yaml
@@ -12,29 +12,38 @@ Globals:
     Timeout: 120
 
 Resources:
-  HelloWorldGqFunction:
+  TsSimpleApiProxyFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
+      CodeUri:
       Handler: ./dist/main.example # name of the handler function in src/handler.js
-      Runtime: nodejs14.x
+      Runtime: nodejs12.x
+      Description: Example Lambda Function
+      MemorySize: 1024
+      Timeout: 15
       Events:
-        HelloWorldGq:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+        TsSimpleApiProxy:
+          Type: Api # Creates API Gateway. More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
+            # StageName: prod
             Path: /get-users
             Method: get
-      Policies: ./config/policies.yaml
+      Policies: # Creates IAM Role
+        # We can choose from a list of policy templates which are specific to SAM
+        # See: https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-policy-templates.html
+        - SSMParameterReadPolicy:
+            ParameterName: mock-parameter # For this policy, ParameterName is required
 
 Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldGqApi:
-    Description: "API Gateway endpoint URL for Prod stage for Hello World GraphQL function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldGqFunction:
-    Description: "Hello World GraphQL Lambda Function ARN"
-    Value: !GetAtt HelloWorldFunction.Arn
-  # HelloWorldGqFunctionIamRole:
-  #   Description: "Implicit IAM Role created for Hello World GraphQL function"
-  #   Value: !GetAtt HelloWorldFunctionRole.Arn
+  TsSimpleApiProxyApi:
+    Description: "API Gateway endpoint URL for Prod stage for function"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/get-users"
+  TsSimpleApiProxyFunction:
+    Description: "Lambda Function ARN"
+    Value: !GetAtt TsSimpleApiProxyFunction.Arn
+  TsSimpleApiProxyFunctionIamRole:
+    Description: "Implicit IAM Role created for the function"
+    Value: !GetAtt TsSimpleApiProxyFunction.Arn
