Update sam template

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "integration": "nyc --reporter=html --reporter=text mocha -r ts-node/register --recursive --timeout 5000 integration/**/*.ts",
     "dev": "yarn webpack-build && sam local start-api",
     "pre-deploy": "yarn webpack-build && sam build && cp -R ./dist ./.aws-sam/build/TsSimpleApiProxyFunction",
-    "deploy-example": "sam deploy --s3-bucket test.lambdafunction.bucket --s3-prefix simpleapiproxy",
+    "deploy-test": "yarn pre-deploy && sam deploy --s3-bucket test.lambdafunction.bucket --s3-prefix simpleapiproxy",
     "remove": "aws cloudformation delete-stack --stack-name ts-simple-api-proxy-with-sam"
   },
   "repository": {
